--- a/Surge 2.conf
+++ b/Surge 2.conf
@@ -1,4 +1,4 @@
-# Surge 的规则配置手册: https://manual.nssurge.com/
+# 来自 https://github.com/Hackl0us/SS-Rule-Snippet
 
 [General]
 loglevel = notify
@@ -36,15 +36,11 @@ hide-udp = false
 # -----------------------------
 
 [Proxy]
-DIRECT = direct
-ProxyHTTP = http, 1.2.3.4, 443, username, password, skip-common-name-verify=false
-ProxyHTTPS = http, 1.2.3.4, 443, username, password, tls=true // 等价于 "https, 1.2.3.4, 443, username, password"
-ProxySOCKS5 = socks5, 1.2.3.4, 443, username, password
-ProxySOCKS5TLS = socks5, 1.2.3.4, 443, username, password, tls=true
-Custom = custom, 服务器地址, 端口号, 加密方式, 密码, SSEncrypt.module 的 URL(, 混淆方式, 混淆参数, tfo=true|false, udp-relay=true|false) //括号()内为可选参数，详情参考上文提供的配置手册
+us = custom, 1.2.3.4, 433, aes-256-cfb, 123456789,https://github.com/Newlearner365/Surge-config/raw/master/SSEncrypt.module
+ru = custom, 1.2.3.4, 433, aes-256-cfb, 123456789,https://github.com/Newlearner365/Surge-config/raw/master/SSEncrypt.module
 
 [Proxy Group]
-Proxy = select, DIRECT, ProxyHTTP, ProxyHTTPS, ProxySOCKS5, ProxySOCKS5TLS, Custom
+Proxy = select, us, ru
 
 [Rule]
 # 自定义规则
