Update and rename Surge 2.conf to Surge2.conf

--- a/Surge2.conf
+++ b/Surge2.conf
@@ -36,11 +36,11 @@ hide-udp = false
 # -----------------------------
 
 [Proxy]
-us = custom, 1.2.3.4, 433, aes-256-cfb, 123456789,https://github.com/aoccin/surge/raw/master/SSEncrypt.module
-ru = custom, 1.2.3.4, 433, aes-256-cfb, 123456789,https://github.com/aoccin/surge/raw/master/SSEncrypt.module
+🇺🇸美国 = custom, 1.2.3.4, 433, aes-256-cfb, 123456789,https://github.com/aoccin/surge/raw/master/SSEncrypt.module
+🇷🇺俄罗斯= custom, 1.2.3.4, 433, aes-256-cfb, 123456789,https://github.com/aoccin/surge/raw/master/SSEncrypt.module
 
 [Proxy Group]
-Proxy = select, us, ru
+Proxy = select, 🇺🇸美国,🇷🇺俄罗斯
 
 [Rule]
 # 自定义规则
