--- a/Rule.conf
+++ b/Rule.conf
@@ -1,3 +1,48 @@
+[General]
+loglevel = notify
+dns-server = 1.2.4.8, 114.114.114.114, 223.5.5.5, 8.8.8.8, system
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,17.0.0.0/8,localhost,*.local,169.254.0.0/16,224.0.0.0/4,240.0.0.0/4
+
+interface = 0.0.0.0
+socks-interface = 0.0.0.0
+port = 6152
+socks-port = 6153
+
+## iOS
+allow-wifi-access = true
+external-controller-access = 请指定密码@0.0.0.0:6170
+ 
+## macOS
+enhanced-mode-by-rule = false
+ 
+## Universal
+exclude-simple-hostnames = true
+ipv6 = false
+replica = false
+
+[Replica]
+hide-apple-request = true
+hide-crashlytics-request = true
+use-keyword-filter = false
+hide-udp = false
+
+# -----------------------------
+# Surge 的几种策略配置规范，请参考 https://manual.nssurge.com/policy/proxy.html
+# Surge 现已支持 UDP 转发功能，请参考: https://trello.com/c/ugOMxD3u/53-udp-%E8%BD%AC%E5%8F%91
+# Surge 现已支持 TCP-Fast-Open 技术，请参考: https://trello.com/c/ij65BU6Q/48-tcp-fast-open-troubleshooting-guide
+# Surge 现已支持 ss-libev 的全部加密方式和混淆，请参考: https://trello.com/c/BTr0vG1O/47-ss-libev-%E7%9A%84%E6%94%AF%E6%8C%81%E6%83%85%E5%86%B5
+# -----------------------------
+
+[Proxy]
+🇺🇸美国 = custom, 1.2.3.4, 433, aes-256-cfb, 123456789,https://github.com/aoccin/surge/raw/master/SSEncrypt.module
+🇷🇺俄罗斯= custom, 1.2.3.4, 433, aes-256-cfb, 123456789,https://github.com/aoccin/surge/raw/master/SSEncrypt.module
+
+[Proxy Group]
+Proxy = select, 🇺🇸美国,🇷🇺俄罗斯
+
+[Rule]
+# 自定义规则
+## 您可以在此处插入自定义规则
 # Ads in Video apps
 
 # > iqiyi & pps
